# Guess_Song

./: .env.example  .gitignore  README.md  SESSION_HANDOFF.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/catalog/: admin.py  models.py
backend/apps/catalog/migrations/: 0001_initial.py  0002_remove_chart_unique_chart_source_type_year_and_more.py  0003_song_pipeline_models.py
backend/apps/core/: api.py  text.py
backend/apps/ingestion/: admin.py  models.py  youtube_matching.py
backend/apps/ingestion/migrations/: 0001_initial.py  0002_rawcandidate.py  0003_rawcandidate_raw_source_keys.py  0004_artistseed.py  0005_remove_artistseed_ingestion_a_status_8ef043_idx_and_more.py  0006_youtubeartistdiscoverycursor.py  0007_discoveredyoutubevideo.py  0008_discovered_youtube_video_dedupe_keys.py
backend/apps/moderation/: admin.py  models.py  review_api.py
backend/apps/moderation/migrations/: 0001_initial.py  0002_qualityreport.py
backend/apps/quizzes/: admin.py  api.py  models.py
backend/apps/quizzes/migrations/: 0001_initial.py  0002_song_youtube_source_refs.py
backend/apps/rooms/: admin.py  api.py  consumers.py  game_settings.py  models.py  routing.py  services.py  tasks.py  tokens.py
backend/apps/rooms/migrations/: 0001_initial.py  0002_room_host_token.py  0003_participant_is_active_participant_left_at.py  0004_participant_status.py  0005_roundskipvote.py  0006_roundanswerfieldstate_and_more.py  (+3 more)
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  local.py
(+57 files in other folders)
